fix sponsors block on mobile (#370)

--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,10 @@ ul.navbar-nav {
   .navbar-nav .open .dropdown-menu .row{
     max-height: 40vh;
   }
+
+  .sponsors-item {
+    display: inline-block;
+  }
 }
 
 .row.home{
